Fix scrolling when the page is too big

--- a/static/style.css
+++ b/static/style.css
@@ -15,6 +15,17 @@
     color: var(--text-color);
 }
 
+body {
+    background: #70234e;
+    width: 100%;
+    min-height: 100%;
+    margin: 0;
+    padding: 0;
+    padding-top: 2em;
+    font-family: sans-serif;
+    overflow: auto;
+}
+
 @media (prefers-color-scheme: dark) {
     :root {
         --highlight-color: orange;
